# ai_news_bot

./: .env  .gitignore  news.db
backend/: main.py
backend/ai_module/: category.py  cleaner.py  model.py  pipeline.py
backend/db/: database.py  models.py
backend/rust_core/: Cargo.toml
backend/rust_core/src/: lib.rs
backend/telegram/: bot.py  handlers.py
